--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 h2 {
   color: red;
 }
+
+    path {
+        stroke: white;
+        stroke-width: 0.5px;
+        fill: black;
+    }
+
+.state {
+  stroke-width: 1;
+  stroke: #ffffff;
+}
