--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h2 {
-  color: red;
+  color: black;
 }
 
 path {
@@ -17,3 +17,37 @@ path {
   fill: lightblue;
   cursor: pointer;
 }
+/*
+.slidecontainer {
+  width: 50px;
+}*/
+
+.slider {
+  -webkit-appearance: none;
+  width: 350px;
+  height: 15px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: darkblue;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background: #04AA6D;
+  cursor: pointer;
