--- a/style.css
+++ b/style.css
@@ -51,3 +51,18 @@ path {
   height: 20px;
   background: #04AA6D;
   cursor: pointer;
+
+}
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  min-height: 28px;
+  padding: 8px 12px;
+  font: 12px sans-serif;
+  background: lightgray;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
