--- a/style.css
+++ b/style.css
@@ -53,6 +53,17 @@ path {
   cursor: pointer;
 
 }
+/* body {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  height: 200vh;
+  flex-direction: column;
+} */
+/* .state {
+  stroke-width: 1;
+  stroke: #ffffff;
+} */
 
 div.tooltip {
   position: absolute;
